Closed
Bug 1254515
Opened 9 years ago
Closed 9 years ago
GonkCameraImage.cpp:16:5: error: class 'mozilla::GonkCameraImage' does not have any field named 'mThread'
Categories
(Firefox OS Graveyard :: GonkIntegration, defect)
Tracking
(firefox48 fixed)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| firefox48 | --- | fixed |
People
(Reporter: reuben, Assigned: fabrice)
References
Details
Attachments
(1 file)
|
1.50 KB,
patch
|
reuben
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•9 years ago
|
||
Fixes the issue for me.
Assignee: nobody → fabrice
Attachment #8728197 -
Flags: review?(reuben.bmo)
| Reporter | ||
Comment 2•9 years ago
|
||
Comment on attachment 8728197 [details] [diff] [review]
gonk-image.patch
Review of attachment 8728197 [details] [diff] [review]:
-----------------------------------------------------------------
r=me. I was going to fix this but spent all day retrying failed ./repo sync's…
Attachment #8728197 -
Flags: review?(reuben.bmo) → review+
Comment 4•9 years ago
|
||
| bugherder | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•